Toolbox improvements
Changes:
* ...